--- a/OutworldzFiles/Help/TroubleShooting.htm
+++ b/OutworldzFiles/Help/TroubleShooting.htm
@@ -61,6 +61,7 @@ a:link, span.MsoHyperlink
 span.Heading2Char
 	{mso-style-name:"Heading 2 Char";
 	mso-style-link:"Heading 2";
+	font-family:"Times New Roman",serif;
 	text-transform:uppercase;
 	letter-spacing:.75pt;
 	background:#D9E2F3;}
@@ -119,15 +120,14 @@ src="TroubleShooting_files/image001.png" alt=Image></span></p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>Try This
-First: </span></h2>
+<h2><span lang=EN style='color:black'>Try This First: </span></h2>
 
 </div>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>You
-may need to reset your router by cycling the router power if you change settings
-from the defaults.</span></p>
+may need to reset your router by cycling the router power if you change
+settings from the defaults.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>UPnP
@@ -140,7 +140,7 @@ Forward them to your PC.</span></p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>Try This Next</span></h2>
+<h2><span lang=EN style='color:black'>Try This Next</span></h2>
 
 </div>
 
@@ -166,7 +166,7 @@ Server. </span></p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>Password Reset</span></h2>
+<h2><span lang=EN style='color:black'>Password Reset</span></h2>
 
 </div>
 
@@ -180,8 +180,7 @@ password' in the Robust screen.</span></p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>Troubleshooting
-the Network.</span></h2>
+<h2><span lang=EN style='color:black'>Troubleshooting the Network.</span></h2>
 
 </div>
 
@@ -264,10 +263,10 @@ All the above tests are LAN-based.&nbsp; So now try the router:<br>
 &nbsp;&nbsp;&nbsp; <a href="http://canyouseeme.org/">http://canyouseeme.org</a>
 on port 8002<br>
 <br>
-This test must pass.&nbsp;&nbsp; If it does not the problem is either the
-router is not forwarding, or another firewall is blocking you.&nbsp; Usually
-this is when people realize they have their router plugged into another router
-that needs to port forward, too.  <br>
+This test must pass.&nbsp;&nbsp; If it does not the problem is either the router
+is not forwarding, or another firewall is blocking you.&nbsp; Usually this is
+when people realize they have their router plugged into another router that
+needs to port forward, too.  <br>
 <br>
 Go read the manual on Port Forwards.  Look up your router manual.  Go to http://portforward.com
 and look it up, too.<br>
@@ -291,8 +290,7 @@ Canyouseeme.org shows as the address.&nbsp; The gateway is
 255.255.255.0&nbsp;&nbsp; No other settings are needed.&nbsp;&nbsp; Close those
 settings, and right click the adapter and enable it. <br>
 <br>
-6.&nbsp; Navigate to http://(The Ip address reported by
-CanyouSeeme.org):8002&nbsp;<br>
+6.&nbsp; Navigate to http://(The Ip address reported by CanyouSeeme.org):8002&nbsp;<br>
 <br>
 You should see the web page.  If not, recheck the Loopback settings.  <br>
 <br>
@@ -324,8 +322,7 @@ You should unlock 10 to 15 ports for expansion, as any extras are harmless. </sp
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>Flaky
-Teleports</span></h2>
+<h2><span lang=EN style='color:black'>Flaky Teleports</span></h2>
 
 </div>
 
@@ -344,9 +341,9 @@ address in your viewer, and teleports on your grid should take just moments. </s
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>Try
 uploading a dozen textures. Do they all load without aborting? Now ask some on
-the Hypergrid to do so. If there is a difference, you have issues with the
-router and loopback, as the traffic from you and the outside both go to the
-region, but the region cannot reliably reach some of the ports. </span></p>
+the Hypergrid to do so. If there is a difference, you have issues with the router
+and loopback, as the traffic from you and the outside both go to the region,
+but the region cannot reliably reach some of the ports. </span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>Do
@@ -392,8 +389,7 @@ up in a working configuration on first boot.  </span></p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>The URL I use
-to Test port forwards:</span></h2>
+<h2><span lang=EN style='color:black'>The URL I use to Test port forwards:</span></h2>
 
 </div>
 
@@ -408,8 +404,7 @@ should be <b>yes</b></span></p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>Test Private
-Loopback:</span></h2>
+<h2><span lang=EN style='color:black'>Test Private Loopback:</span></h2>
 
 </div>
 
@@ -425,8 +420,7 @@ should be <b>Test Completed</b></span></p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>Test Public
-Loopback</span></h2>
+<h2><span lang=EN style='color:black'>Test Public Loopback</span></h2>
 
 </div>
 
@@ -442,8 +436,7 @@ back a web page </span></p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>How to Get on
-The Hypergrid</span></h2>
+<h2><span lang=EN style='color:black'>How to Get on The Hypergrid</span></h2>
 
 </div>
 
@@ -458,8 +451,7 @@ site at </span><a href="http://opensimulator.org/wiki/NAT_Loopback_Routers">http
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>UPnP Not
-Working?</span></h2>
+<h2><span lang=EN style='color:black'>UPnP Not Working?</span></h2>
 
 </div>
 
@@ -469,7 +461,7 @@ you have Plug and Play (uPnP) issues? Your Help menu has a useful tool to look
 at uPnP in your router:</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span lang=EN><img border=0 width=353 height=225
+10.0pt;margin-left:.5in'><span lang=EN><img border=0 width=353 height=223
 id="Picture 2" src="TroubleShooting_files/image002.png" alt=Image></span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
@@ -490,7 +482,7 @@ style='color:windowtext;text-decoration:none'>http://www.portforward.com</span><
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>Firewall</span></h2>
+<h2><span lang=EN style='color:black'>Firewall</span></h2>
 
 </div>
 
@@ -512,7 +504,7 @@ text-decoration:none'>https://www.github.com/Outworldz</span></a>.</span></p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>Updater:</span></h2>
+<h2><span lang=EN style='color:black'>Updater:</span></h2>
 
 </div>
 
@@ -524,8 +516,7 @@ repair any missing files.</span></p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>Help with
-Opensim Crashes:</span></h2>
+<h2><span lang=EN style='color:black'>Help with Opensim Crashes:</span></h2>
 
 </div>
 
@@ -540,7 +531,7 @@ click the BLANK area next to the files. Or navigate there, as I did below, by
 typing in commands. Then run &quot;StartManually.bat&quot;</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span lang=EN><img border=0 width=410 height=227
+10.0pt;margin-left:.5in'><span lang=EN><img border=0 width=410 height=225
 id="Picture 3" src="TroubleShooting_files/image003.png" alt=Image></span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
@@ -552,8 +543,7 @@ give you a clue as to what to do.</span></p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>My database
-still did not start.  </span></h2>
+<h2><span lang=EN style='color:black'>My database still did not start.  </span></h2>
 
 </div>
 
@@ -571,8 +561,7 @@ wait for the CPU to drop to 0%</span></p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>Starting Over with
-A Blank Database</span></h2>
+<h2><span lang=EN style='color:black'>Starting Over with A Blank Database</span></h2>
 
 </div>
 
@@ -604,7 +593,7 @@ your Avatar name and password and reload everything.</span></p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>Ports</span></h2>
+<h2><span lang=EN style='color:black'>Ports</span></h2>
 
 </div>
 
@@ -660,10 +649,10 @@ server to answer the request.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>This
-port is listened to by Robust so regions can chat to the server database for
-login, presence, and other services so people can teleport from one region to
-another. In Dreamgrid, just like OsGrid or any other remotely attachable grid,
-the regions can run on any machine anywhere in the world.</span></p>
+port is listened to by Robust so regions can chat to the server database for login,
+presence, and other services so people can teleport from one region to another.
+In Dreamgrid, just like OsGrid or any other remotely attachable grid, the
+regions can run on any machine anywhere in the world.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>If
@@ -688,8 +677,7 @@ late to use it if it comes later in a retry. It just gets discarded.</span></p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>Running
-Manually</span></h2>
+<h2><span lang=EN style='color:black'>Running Manually</span></h2>
 
 </div>
 
@@ -728,8 +716,7 @@ will do this for you.</span></p>
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>Run as A
-Service </span></h2>
+<h2><span lang=EN style='color:black'>Run as A Service </span></h2>
 
 </div>
 
@@ -743,8 +730,8 @@ Windows. </span></p>
 10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>This
 batch file must be run once, as an Administrator. You type &quot;CMD&quot; in
 the search box, and then right click the Command Prompt and select &quot;Run as
-Administrator&quot;.  Use that DOS box to run *InstallAsAService.bat*. Then type
-in 'Services.msc” and use it to start MySQL.</span></p>
+Administrator&quot;.  Use that DOS box to run *InstallAsAService.bat*. Then
+type in 'Services.msc” and use it to start MySQL.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>You
@@ -782,13 +769,12 @@ call go Welcome<br>
 call go AnotherRegion</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>                                                                                                 </span></p>
+10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>                                                                                                        </span></p>
 
 <div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>How to Compile
-DreamGrid</span></h2>
+<h2><span lang=EN style='color:black'>How to Compile DreamGrid</span></h2>
 
 </div>
 
