--- a/OutworldzFiles/Help/Startup.htm
+++ b/OutworldzFiles/Help/Startup.htm
@@ -121,45 +121,49 @@ originally authored.  It is virus-free and has no ads. It should say
 
 <p class=MsoNormal>Om Server products, you will need to install Microsoft Dot
 Net 3.5 in “Server Manager”. <br>
-Click Next.. Next… Through The Menus on the left, until you see this screen
-under <b>Server Roles</b>. </p>
+Click Next.. Next… and continue through the Menus on the left, until you see
+this screen under <b>Server Roles</b>. </p>
 
-<p class=MsoNormal>Select Dot Net 3.5 and select Install.<br>
+<p class=MsoNormal>elect Dot Net 3.5 and select Install.<br>
 <img width=375 height=269 src="Startup_files/image001.png"></p>
 
-<p class=MsoNormal><img width=317 height=282 src="Startup_files/image002.png"
-align=left hspace=12 vspace=5 alt="Text Box:  ">Click [Start] in the top left
-of the menu:</p>
+<p class=MsoNormal>Click [Start] in the top left of the menu:</p>
 
 <p class=MsoNormal><img width=323 height=147 id="Picture 1"
-src="Startup_files/image003.jpg"></p>
+src="Startup_files/image002.jpg"></p>
+
+<p class=MsoNormal>A Robust DOS bxo will appear and create a new Opensim Grid.
+It should disappear onto the task bar.</p>
 
 <p class=MsoNormal>This box will appear for you to claim ownership of the
 Grid.  Use a unique, new long password as this is the avatar that owns the
 grid.</p>
+
+<p class=MsoNormal><img width=361 height=297 src="Startup_files/image003.jpg"></p>
 
 <span style='font-size:10.0pt;line-height:115%;font-family:"Calibri",sans-serif'><br
 clear=all style='page-break-before:always'>
 </span>
 
 <p class=MsoNormal>Another DOS box will appear. This will be your first region.
-The region is named &quot;Welcome&quot;.&nbsp;&nbsp;You can change this name
-later.  The system will ask you for an estate name.&nbsp; You can just press
-enter to name it “My Estate”, or type in a new name. </p>
+The region is named &quot;Welcome&quot;.&nbsp;&nbsp;You can change this name later. 
+The system will ask you for an Estate name.&nbsp; You can just press enter to
+name it “My Estate”, or type in a new name.  Estates hold regions and the
+avatar that owns the Estate will own all regions in that Estate.</p>
 
-<p class=MsoNormal><img width=413 height=217 id=image153.png
+<p class=MsoNormal><img width=633 height=331 id=image153.png
 src="Startup_files/image004.jpg" alt=Image></p>
 
 <p class=MsoNormal>It will then ask you for the owner’s name of this
 region.&nbsp;&nbsp; <b><u>Use the same name that you first entered.</u></b></p>
 
-<p class=MsoNormal><img width=431 height=225 id=image171.png
+<p class=MsoNormal><img width=638 height=333 id=image171.png
 src="Startup_files/image005.jpg" alt=Image></p>
 
-<p class=MsoNormal>The system will eventually&nbsp;tell you &quot;<b>INITIALIZATION
-COMPLETE FOR Welcome - LOGINS ENABLED&quot;</b></p>
+<p class=MsoNormal>The system will tell you &quot;<b>INITIALIZATION COMPLETE
+FOR Welcome - LOGINS ENABLED&quot;</b></p>
 
-<p class=MsoNormal><img width=471 height=267 src="Startup_files/image006.jpg"></p>
+<p class=MsoNormal><img width=643 height=365 src="Startup_files/image006.jpg"></p>
 
 <span style='font-size:10.0pt;line-height:115%;font-family:"Calibri",sans-serif'><br
 clear=all style='page-break-before:always'>
@@ -169,32 +173,122 @@ clear=all style='page-break-before:always'>
 
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
 
-<h2><span style='color:black'>Setup Your Viewer:</span></h2>
+<h2><span style='color:black'>Grid Address</span></h2>
 
 </div>
 
 <p class=MsoNormal>Click the first item in the Help menu - <b>Show Grid Address</b>. 
 It may print a name, or an IP address.</p>
 
-<p class=MsoNormal><img width=327 height=207 src="Startup_files/image007.png"
-align=left hspace=12 alt="Text Box: The system will print the address. &#13;&#10; &#13;&#10;"><img
-width=377 height=218 src="Startup_files/image008.png"></p>
+<p class=MsoNormal><img width=431 height=249 src="Startup_files/image007.png"></p>
 
-<p class=MsoNormal><br>
-Download the Firestorm viewer for Opensim. You can get it from&nbsp;<a
-href="https://www.firestormviewer.org/">https://www.firestormviewer.org/</a></p>
+<p class=MsoNormal>The system will print the address. </p>
+
+<p class=MsoNormal><img width=375 height=171 src="Startup_files/image008.jpg"></p>
+
+<p class=MsoNormal>To change this to a domain name, you will need to run some
+tests. These steps are in the Help manual for Hypergrid Setup. Before you go
+change thinks, please finish booting up your grid and finish these steps to
+test it.</p>
+
+<p class=MsoNormal><img width=655 height=353 src="Startup_files/image009.jpg"></p>
+
+<p class=MsoNormal>You can drag the borders of the windo to expose graphs on
+performance other options. Icecast and Apache will be Red as they are disabled
+as a default. These options  let you host a Shoutcas/Icecast server to stream
+audio into your world, and to run a Web server such as WordPress or Joomla/jOpensim.</p>
+
+<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
+
+<h2><span style='color:black'>Setup a Viewer</span></h2>
+
+</div>
+
+<p class=MsoNormal>Download the Firestorm viewer for Opensim. You can get it
+from&nbsp;<a href="https://www.firestormviewer.org/">https://www.firestormviewer.org/</a></p>
 
 <p class=MsoNormal>Launch the viewer and go to the Viewer Preferences menu
 (Ctrl-P).</p>
 
 <p class=MsoNormal><img border=0 width=164 height=107 id=image162.png
-src="Startup_files/image009.png" alt=Image></p>
+src="Startup_files/image010.png" alt=Image></p>
 
-<p class=MsoNormal><img width=259 height=217 src="Startup_files/image010.png"
-align=left hspace=12
-alt="Text Box: Add the IP address to the Firestorm or &quot;Add new Grid&quot; field and click &quot;Apply&quot;.  You should now be able to select your new DreamGrid in the pulldown login screen and log in with the same First and Last Name and password you originally entered. &#13;&#10;You should then appear on a small round island.&#13;&#10;">Go
-to the Opensim Grid manager screen:<br>
-<img border=0 width=400 height=326 src="Startup_files/image011.png"></p>
+<p class=MsoNormal>Go to the Opensim Grid manager screen</p>
+
+<p class=MsoNormal><img border=0 width=400 height=326
+src="Startup_files/image011.png"></p>
+
+<p class=MsoNormal>Add the IP address to the Firestorm or &quot;Add new
+Grid&quot; field and click &quot;Apply&quot;.  </p>
+
+<p class=MsoNormal>You should now be able to select your new DreamGrid in the
+pulldown login screen and log in with the same First and Last Name and password
+you originally entered. You should then appear on a small round island.</p>
+
+<p class=MsoNormal><img border=0 width=719 height=487
+src="Startup_files/image012.jpg"></p>
+
+<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
+
+<h2><span style='color:black'>Useful First Steps</span></h2>
+
+</div>
+
+<p class=MsoNormal>To create a flat island, go to the Welcome region console
+icon and type in ‘terrain fill 23’ and press enter.     You will see the terrain
+fill to be 3 meters above the water level.</p>
+
+<p class=MsoNormal>Load an OAR:  Go to the first entry in the Content Menu.</p>
+
+<p class=MsoNormal><img border=0 width=391 height=230
+src="Startup_files/image013.png"></p>
+
+<p class=MsoNormal>Search for ‘island’ and click the Lonely Island (shown at
+top right here) as it is a fast, quick demo of this capability.</p>
+
+<p class=MsoNormal><img border=0 width=503 height=255
+src="Startup_files/image014.png"></p>
+
+<p class=MsoNormal>Click the Island and a Choose Region box will pop up. Double
+click the Welcome Region or click once and select OK.</p>
+
+<p class=MsoNormal><img border=0 width=249 height=376
+src="Startup_files/image015.jpg"></p>
+
+<p class=MsoNormal>A region options panel will appear:</p>
+
+<p class=MsoNormal><img border=0 width=296 height=346
+src="Startup_files/image016.png"></p>
+
+<p class=MsoNormal>This map shows the original “Pimple Island” where you are
+standing.   There are Options at upper left to allow you to Merge two or mor
+OARs,  or Erase all contents, to Set Terrain, and so on. </p>
+
+<p class=MsoNormal>For now, just click the Blue Map and the system will load
+the OAR.</p>
+
+<p class=MsoNormal><img border=0 width=717 height=486
+src="Startup_files/image017.jpg"></p>
+
+<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
+
+<h2 style='background:#DEEAF6'><span style='color:black'>Other things to look
+at</span></h2>
+
+</div>
+
+<p class=MsoNormal>To create another user, go to the Robust Console and type
+‘create user’ then type enter. You can press Enter for any question you do not
+understand.</p>
+
+<p class=MsoNormal>UI:  To grant yourself more permissions to edit and add
+users to the Web Interface, type ‘set login level &lt;First Name&gt; &lt;Last
+Name&gt; 200’ and press enter. </p>
+
+<p class=MsoNormal>UI:  To view the Web User Interface, look in Help at the
+section <b>View Web Interface</b> (Ctrl + W).  The address is also<a
+href="%20http:/127.0.0.1:8002"> <b>http://127.0.0.1:8002</b></a>. You can log
+in with your Avatars First and Last Name  and rename or delete users.</p>
 
 </div>
 
